--- a/src/main/resources/assets/beautifulworld/lang/en_us.json
+++ b/src/main/resources/assets/beautifulworld/lang/en_us.json
@@ -37,6 +37,8 @@
     "block.beautifulworld.pitahaya_tree_planks": "Pitahaya Planks",
     "block.beautifulworld.pitahaya_tree_button": "Pitahaya Butotn",
     "block.beautifulworld.pitahaya_tree_pressure_plate": "Pitahaya Pressure Plate",
+    "block.beautifulworld.pitahaya_tree_fence": "Pitahaya Fence",
+    "block.beautifulworld.pitahaya_tree_fence_gate": "Pitahaya Fence Gate",
 
     "itemGroup.beautifulworld.items": "Beautiful World: Items",
     "itemGroup.beautifulworld.blocks": "Beautiful World: Block",
