--- a/src/main/resources/assets/beautifulworld/lang/ru_ru.json
+++ b/src/main/resources/assets/beautifulworld/lang/ru_ru.json
@@ -35,6 +35,8 @@
     "block.beautifulworld.pitahaya_tree_planks": "Доски из Питахайного Дерева",
     "block.beautifulworld.pitahaya_tree_button": "Кнопка из Питахайного Дерева",
     "block.beautifulworld.pitahaya_tree_pressure_plate": "Нажимная Плита из Питахайного Дерева",
+    "block.beautifulworld.pitahaya_tree_fence": "Забор и Питахайного Дерева",
+    "block.beautifulworld.pitahaya_tree_fence_gate": "Калитка из Питахайного Дерева",
 
     "itemGroup.beautifulworld.items": "Beautiful World: Предметы",
     "itemGroup.beautifulworld.blocks": "Beautiful World: Блоки",
