--- a/src/main/resources/assets/beautifulworld/lang/en_us.json
+++ b/src/main/resources/assets/beautifulworld/lang/en_us.json
@@ -20,7 +20,7 @@
     "item.beautifulworld.rhodium_multitool": "Rhodium Multi-Tool",
     "item.beautifulworld.pitahaya": "Pitahaya",
 
-    "item.beautifulworld.baikal_water.desc": "Only for Creative",
+    "item.beautifulworld.baikal_water.desc": "Only for Creative mode",
 
     "block.beautifulworld.overloud_block": "Overloud Block",
     "block.beautifulworld.raw_overloud_block": "Raw Overloud Block",
