--- a/src/main/resources/assets/beautifulworld/lang/ru_ru.json
+++ b/src/main/resources/assets/beautifulworld/lang/ru_ru.json
@@ -24,7 +24,7 @@
     "block.beautifulworld.raw_overloud_block": "Блок Рудного Оверлоуда",
     "block.beautifulworld.overloud_ore": "Оверлоудовая Руда",
     "block.beautifulworld.rhodium_block": "Родиевый Блок",
-    "block.beautifulworld.rhodium_ore": "Блок Родиевой Руды",
+    "block.beautifulworld.rhodium_ore": "Родиевая Руда",
     "block.beautifulworld.infected_stone": "Заражённый Камень",
     "block.beautifulworld.pitahaya_leaves": "Листва Питахайного Дерева",
     "block.beautifulworld.fruitful_pitahaya_leaves": "Листва с Плодами Питахайного Дерева",
