update lang and textures folders

--- a/src/main/resources/assets/beautifulworld/lang/ru_ru.json
+++ b/src/main/resources/assets/beautifulworld/lang/ru_ru.json
@@ -38,6 +38,9 @@
     "block.beautifulworld.pitahaya_tree_fence": "Забор из Питахайного Дерева",
     "block.beautifulworld.pitahaya_tree_fence_gate": "Калитка из Питахайного Дерева",
 
+    "effect.beautifulworld.immunity": "Иммунитет",
+    "effect.beautifulworld.infection": "Заражение",
+
     "itemGroup.beautifulworld.items": "Beautiful World: Предметы",
     "itemGroup.beautifulworld.blocks": "Beautiful World: Блоки",
     "itemGroup.beautifulworld.equipment": "Beautiful World: Снаряжение"
