--- a/src/main/resources/assets/beautifulworld/lang/ru_ru.json
+++ b/src/main/resources/assets/beautifulworld/lang/ru_ru.json
@@ -1,42 +1,50 @@
 {
-    "item.beautifulworld.overloud_ingot": "Оверлоудовый Слиток",
-    "item.beautifulworld.raw_overloud": "Рудный Оверлоуд",
-    "item.beautifulworld.rhodium_ingot": "Родиевый Слиток",
+    "item.beautifulworld.overloud_ingot": "Оверлоудовый слиток",
+    "item.beautifulworld.raw_overloud": "Рудный оверлоуд",
+    "item.beautifulworld.rhodium_ingot": "Родиевый слиток",
     "item.beautifulworld.crystallite": "Кристаллит",
-    "item.beautifulworld.baikal_water": "Байкальская Вода",
-    "item.beautifulworld.overloud_sword": "Оверлоудовый Меч",
-    "item.beautifulworld.overloud_pickaxe": "Оверлоудовая Кирка",
-    "item.beautifulworld.overloud_axe": "Оверлоудовый Топор",
-    "item.beautifulworld.overloud_hoe": "Оверлоудовая Мотыга",
-    "item.beautifulworld.overloud_shovel": "Оверлоудовая Лопата",
-    "item.beautifulworld.overloud_helmet": "Оверлоудовый Шлем",
-    "item.beautifulworld.overloud_chestplate": "Оверлоудовый Нагрудник",
-    "item.beautifulworld.overloud_leggings": "Оверлоудовые Поножи",
-    "item.beautifulworld.overloud_boots": "Оверлоудовые Ботинки",
-    "item.beautifulworld.netherite_multitool": "Незеритовый Мультиинструмент",
+    "item.beautifulworld.baikal_water": "Байкальская вода",
+    "item.beautifulworld.overloud_sword": "Оверлоудовый меч",
+    "item.beautifulworld.overloud_pickaxe": "Оверлоудовая кирка",
+    "item.beautifulworld.overloud_axe": "Оверлоудовый топор",
+    "item.beautifulworld.overloud_hoe": "Оверлоудовая иотыга",
+    "item.beautifulworld.overloud_shovel": "Оверлоудовая лопата",
+    "item.beautifulworld.overloud_helmet": "Оверлоудовый шлем",
+    "item.beautifulworld.overloud_chestplate": "Оверлоудовый нагрудник",
+    "item.beautifulworld.overloud_leggings": "Оверлоудовые поножи",
+    "item.beautifulworld.overloud_boots": "Оверлоудовые ботинки",
+    "item.beautifulworld.netherite_multitool": "Незеритовый мультиинструмент",
     "item.beautifulworld.rhodium_sword": "Родиевый Меч",
-    "item.beautifulworld.rhodium_multitool": "Родиевый Мультиинструмент",
+    "item.beautifulworld.rhodium_multitool": "Родиевый мультиинструмент",
     "item.beautifulworld.pitahaya": "Питахайя",
+    "item.beautifulworld.infected_fragment": "Ошмёток вируса",
 
-    "item.beautifulworld.baikal_water.desc": "Только для Творческого режима",
+    "item.beautifulworld.baikal_water.desc": "Только для творческого режима",
 
-    "block.beautifulworld.overloud_block": "Оверлоудовый Блок",
-    "block.beautifulworld.raw_overloud_block": "Блок Рудного Оверлоуда",
-    "block.beautifulworld.overloud_ore": "Оверлоудовая Руда",
-    "block.beautifulworld.rhodium_block": "Родиевый Блок",
-    "block.beautifulworld.rhodium_ore": "Родиевая Руда",
-    "block.beautifulworld.infected_stone": "Заражённый Камень",
-    "block.beautifulworld.pitahaya_leaves": "Листва Питахайного Дерева",
-    "block.beautifulworld.fruitful_pitahaya_leaves": "Листва с Плодами Питахайного Дерева",
+    "block.beautifulworld.overloud_block": "Оверлоудовый блок",
+    "block.beautifulworld.raw_overloud_block": "Блок рудного оверлоуда",
+    "block.beautifulworld.overloud_ore": "Оверлоудовая руда",
+    "block.beautifulworld.rhodium_block": "Родиевый блок",
+    "block.beautifulworld.rhodium_ore": "Родиевая руда",
+    "block.beautifulworld.infected_stone": "Заражённый камень",
+    "block.beautifulworld.infected_cobblestone": "Заражённый булыжник",
+    "block.beautifulworld.infected_clay": "Заражённая глина",
+    "block.beautifulworld.infected_dirt": "Заражённая земля",
+    "block.beautifulworld.infected_sand": "Заражённый песок",
+    "block.beautifulworld.pitahaya_leaves": "Листва питахайного дерева",
+    "block.beautifulworld.fruitful_pitahaya_leaves": "Листва с плодами питахайного дерева",
     "block.beautifulworld.pitahaya_log": "Бревно Питахайного дерева",
-    "block.beautifulworld.stripped_pitahaya_log": "Обтесанное Бревно Питахайного Дерева",
-    "block.beautifulworld.pitahaya_wood": "Питахайное Дерево",
-    "block.beautifulworld.stripped_pitahaya_wood": "Обтесанная Питахайная Древесина",
-    "block.beautifulworld.pitahaya_tree_planks": "Доски из Питахайного Дерева",
-    "block.beautifulworld.pitahaya_tree_button": "Кнопка из Питахайного Дерева",
-    "block.beautifulworld.pitahaya_tree_pressure_plate": "Нажимная Плита из Питахайного Дерева",
-    "block.beautifulworld.pitahaya_tree_fence": "Забор из Питахайного Дерева",
-    "block.beautifulworld.pitahaya_tree_fence_gate": "Калитка из Питахайного Дерева",
+    "block.beautifulworld.stripped_pitahaya_log": "Обтесанное бревно питахайного дерева",
+    "block.beautifulworld.pitahaya_wood": "Питахайное дерево",
+    "block.beautifulworld.stripped_pitahaya_wood": "Обтесанная питахайная древесина",
+    "block.beautifulworld.pitahaya_tree_planks": "Доски из питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_button": "Кнопка из Питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_pressure_plate": "Нажимная плита из питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_fence": "Забор из питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_fence_gate": "Калитка из питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_slab": "Плита из питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_stairs": "Ступеньки из питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_trapdoor": "Люк из питахайного дерева",
 
     "effect.beautifulworld.immunity": "Иммунитет",
     "effect.beautifulworld.infection": "Заражение",
