--- a/src/main/resources/assets/beautifulworld/lang/ru_ru.json
+++ b/src/main/resources/assets/beautifulworld/lang/ru_ru.json
@@ -45,6 +45,7 @@
     "block.beautifulworld.pitahaya_tree_slab": "Плита из питахайного дерева",
     "block.beautifulworld.pitahaya_tree_stairs": "Ступеньки из питахайного дерева",
     "block.beautifulworld.pitahaya_tree_trapdoor": "Люк из питахайного дерева",
+    "block.beautifulworld.pitahaya_tree_door": "Дверь из питахайного дерева",
 
     "effect.beautifulworld.immunity": "Иммунитет",
     "effect.beautifulworld.infection": "Заражение",
