--- a/src/main/resources/assets/beautifulworld/lang/en_us.json
+++ b/src/main/resources/assets/beautifulworld/lang/en_us.json
@@ -4,8 +4,7 @@
     "item.beautifulworld.rhodium_ingot": "Rhodium Ingot",
     "item.beautifulworld.crystallite": "Crystallite",
     "item.beautifulworld.baikal_water": "Baikal Water",
-    "item.beautifulworld.infected_fragment": "Infected Fragment",
-
+    "item.beautifulworld.korg_fragment": "Fragment of Korg",
     "item.beautifulworld.overloud_sword": "Overloud Sword",
     "item.beautifulworld.overloud_pickaxe": "Overloud Pickaxe",
     "item.beautifulworld.overloud_axe": "Overloud Axe",
@@ -16,12 +15,11 @@
     "item.beautifulworld.overloud_leggings": "Overloud Leggings",
     "item.beautifulworld.overloud_boots": "Overloud Boots",
     "item.beautifulworld.netherite_multitool": "Netherite Multi-Tool",
-
     "item.beautifulworld.rhodium_sword": "Rhodium Sword",
     "item.beautifulworld.rhodium_multitool": "Rhodium Multi-Tool",
     "item.beautifulworld.pitahaya": "Pitahaya",
 
-    "item.beautifulworld.baikal_water.desc": "Only for Creative",
+    "tooltip.beautifulworld.baikal_water": "Only for Creative",
 
     "block.beautifulworld.overloud_block": "Overloud Block",
     "block.beautifulworld.raw_overloud_block": "Raw Overloud Block",
@@ -33,21 +31,21 @@
     "block.beautifulworld.infected_clay": "Infected Clay",
     "block.beautifulworld.infected_dirt": "Infected Dirt",
     "block.beautifulworld.infected_sand": "Infected Sand",
-    "block.beautifulworld.pitahaya_leaves": "Pitahaya Leaves",
-    "block.beautifulworld.fruitful_pitahaya_leaves": "Pitahaya Fetus Leaves",
-    "block.beautifulworld.pitahaya_log": "Pitahaya Log",
-    "block.beautifulworld.stripped_pitahaya_log": "Stripped Pitahaya Log",
+    "block.beautifulworld.pitahaya_leaves": "Pitahaya Tree Leaves",
+    "block.beautifulworld.fruitful_pitahaya_leaves": "Pitahaya Tree Fetus Leaves",
+    "block.beautifulworld.pitahaya_log": "Pitahaya Tree Log",
+    "block.beautifulworld.stripped_pitahaya_log": "Stripped Pitahaya Tree Log",
     "block.beautifulworld.pitahaya_wood": "Pitahaya Wood",
     "block.beautifulworld.stripped_pitahaya_wood": "Stripped Pitahaya Wood",
-    "block.beautifulworld.pitahaya_tree_planks": "Pitahaya Planks",
-    "block.beautifulworld.pitahaya_tree_button": "Pitahaya Button",
-    "block.beautifulworld.pitahaya_tree_pressure_plate": "Pitahaya Pressure Plate",
-    "block.beautifulworld.pitahaya_tree_fence": "Pitahaya Fence",
-    "block.beautifulworld.pitahaya_tree_fence_gate": "Pitahaya Fence Gate",
-    "block.beautifulworld.pitahaya_tree_slab": "Pitahaya Slab",
-    "block.beautifulworld.pitahaya_tree_stairs": "Pitahaya Stairs",
-    "block.beautifulworld.pitahaya_tree_trapdoor": "Pitahaya Trapdoor",
-    "block.beautifulworld.pitahaya_tree_door": "Pitahaya Door",
+    "block.beautifulworld.pitahaya_tree_planks": "Pitahaya Tree Planks",
+    "block.beautifulworld.pitahaya_tree_button": "Pitahaya Tree Button",
+    "block.beautifulworld.pitahaya_tree_pressure_plate": "Pitahaya Tree Pressure Plate",
+    "block.beautifulworld.pitahaya_tree_fence": "Pitahaya Tree Fence",
+    "block.beautifulworld.pitahaya_tree_fence_gate": "Pitahaya Tree Fence Gate",
+    "block.beautifulworld.pitahaya_tree_slab": "Pitahaya Tree Slab",
+    "block.beautifulworld.pitahaya_tree_stairs": "Pitahaya Tree Stairs",
+    "block.beautifulworld.pitahaya_tree_trapdoor": "Pitahaya Tree Trapdoor",
+    "block.beautifulworld.pitahaya_tree_door": "Pitahaya Tree Door",
 
     "effect.beautifulworld.immunity": "Immunity",
     "effect.beautifulworld.infection": "Infection",
