--- a/src/main/resources/assets/beautifulworld/lang/ru_ru.json
+++ b/src/main/resources/assets/beautifulworld/lang/ru_ru.json
@@ -7,19 +7,19 @@
     "item.beautifulworld.overloud_sword": "Оверлоудовый меч",
     "item.beautifulworld.overloud_pickaxe": "Оверлоудовая кирка",
     "item.beautifulworld.overloud_axe": "Оверлоудовый топор",
-    "item.beautifulworld.overloud_hoe": "Оверлоудовая иотыга",
+    "item.beautifulworld.overloud_hoe": "Оверлоудовая мотыга",
     "item.beautifulworld.overloud_shovel": "Оверлоудовая лопата",
     "item.beautifulworld.overloud_helmet": "Оверлоудовый шлем",
     "item.beautifulworld.overloud_chestplate": "Оверлоудовый нагрудник",
     "item.beautifulworld.overloud_leggings": "Оверлоудовые поножи",
     "item.beautifulworld.overloud_boots": "Оверлоудовые ботинки",
     "item.beautifulworld.netherite_multitool": "Незеритовый мультиинструмент",
-    "item.beautifulworld.rhodium_sword": "Родиевый Меч",
+    "item.beautifulworld.rhodium_sword": "Родиевый меч",
     "item.beautifulworld.rhodium_multitool": "Родиевый мультиинструмент",
     "item.beautifulworld.pitahaya": "Питахайя",
-    "item.beautifulworld.infected_fragment": "Ошмёток вируса",
+    "item.beautifulworld.korg_fragment": "Корговый ошмёток",
 
-    "item.beautifulworld.baikal_water.desc": "Только для творческого режима",
+    "tooltip.beautifulworld.baikal_water": "Только для творческого режима",
 
     "block.beautifulworld.overloud_block": "Оверлоудовый блок",
     "block.beautifulworld.raw_overloud_block": "Блок рудного оверлоуда",
